k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-api
  labels:
    name: ml-api
    environment: development
